fix all layout(side-bar not responsive)

--- a/style.css
+++ b/style.css
@@ -5,13 +5,14 @@
     box-sizing: border-box;
     /* border: 1px solid red; */
     font-size: 2rem;
-    --text: #ffffffe7;
-    --sidebar: #26a0d8;
+    --text: #ffffff;
+    --sidebar: #1d8fc4;
+    --card: rgb(255, 255, 255);
   }
   html,
   body {
     font-size: 62.5%;
-    font-family: 'noto-sans', sans-serif,roboto;
+    font-family: 'noto-sans', sans-serif,roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
   body,
   .main {
@@ -44,6 +45,13 @@
     font-size: 3rem;
     font-weight: bolder;
     margin-right: 2rem;
+  }
+  .name-title h2{
+    font-size: 3rem;
+    font-weight: bolder;
+  }
+  .name-title p{
+    color: black;
   }
   .side-bar-head{
     display: flex;
@@ -88,7 +96,7 @@
   }
   button{
     background-color: #26a0d8;
-    color: var(--text);
+    color: white;
     font-weight: bold;
     padding: 10px;
     width: 100px;
@@ -104,6 +112,9 @@
   }
   .notify-id-name {
     display: flex;
+  }
+  .notify-id-name p{
+    color: black;
   }
   .notify-bar {
     display: flex;
@@ -143,6 +154,7 @@
     align-items: center;
     gap: 20px;
     margin-left: 2%;
+    padding-bottom: 20px;
   }
   .user-id img{
     height: 100px;
@@ -155,23 +167,54 @@
   .feed {
     display: grid;
     grid-template-columns: 2fr 1fr;
-    gap: 20px;
-    background-color: rgba(14, 14, 14, 0.068);
+    gap: 50px;
+    background-color: rgba(167, 187, 196, 0.274);
+    padding: 20px 50px;
   }
   .project-card {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-row: 1 / -1;
-    gap: 15px;
+    gap: 3.5rem;
   }
   .card {
     text-align: center;
-    border: 2px solid rebeccapurple;
     border-radius: 8px;
+    background-color: var(--card);
+    box-shadow: 5px 5px 10px rgba(53, 53, 53, 0.336);
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-left: 10px solid orange;
+  }
+  .material-symbols-outlined.favorite:hover{
+    cursor: pointer;
+    font-variation-settings:
+    'FILL' 1,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24
+  }
+  .material-symbols-outlined.bookmark:hover{
+    cursor: pointer;
+    font-variation-settings:
+    'FILL' 1,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24
+  }
+  .material-symbols-outlined.share:hover{
+    cursor: pointer;
+    font-variation-settings:
+    'FILL' 1,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24
   }
   .feed-right-side {
-    display: grid;
-    gap: 15px;
+    display: flex;
+    flex-direction: column;
   }
   .material-symbols-outlined {
     justify-content: center;
@@ -190,6 +233,27 @@
   .trend-content ul li {
     display: flex;
     align-items: center;
-    padding: 10px;
+    padding: 15px;
     gap: 10px;
+  }
+  .project-title .announcement .trending,h1{
+    font-size: 3rem;
+    padding: 20px 20px 20px 0px;
+  }
+  .project-title .announcement .trending,p{
+    color: rgba(0, 0, 0, 0.63);
+  }
+  .announcement{
+    background-color: var(--card);
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 5px 5px 10px rgba(53, 53, 53, 0.336)
+  }
+  .announcement ul li{
+    list-style: none;
+  }
+  .trend-content{
+    background-color: var(--card);
+    border-radius: 8px;
+    box-shadow: 5px 5px 10px rgba(53, 53, 53, 0.336);
   }
